added almost all required tests for service package